# C-Graphics-and-Animation-Workshop

./: README.md
AdvencedCubeAnimation+FoggyScene/: CMakeLists.txt  main.cpp  wavefront.cpp
AnimatedTriangle/: CMakeLists.txt  main.cpp
AnimatedTriangle/shader/: shader.vert
MyFirstTriangle/: CMakeLists.txt
MyFirstTriangle/shader/: shader.frag  shader.vert
MyFirstTriangle/src/: main.cpp
Teapot/: CMakeLists.txt  denemeeee.txt  main.cpp  main.txt  wavefront.hpp
Teapot/shader/: shader.frag
